WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40927
AX: VoiceOver does not announce WAI-ARIA state change of aria-expanded
https://bugs.webkit.org/show_bug.cgi?id=40927
Summary
AX: VoiceOver does not announce WAI-ARIA state change of aria-expanded
chris fleizach
Reported
2010-06-21 10:18:48 PDT
1. Load
http://cookiecrook.com/test/aria/tree/ariatree2.html
2. Navigate to the tree list, press up or down to select a collapsed node. 3. Press right to expand the node. * RESULTS VoiceOver user hears nothing. I'd expected to hear the same behavior as the desktop:
Attachments
Patch
(13.35 KB, patch)
2010-06-21 10:20 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Patch
(13.37 KB, patch)
2010-06-21 13:00 PDT
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-06-21 10:20:45 PDT
Created
attachment 59263
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-06-21 10:34:07 PDT
Attachment 59263
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/3295574
chris fleizach
Comment 3
2010-06-21 13:00:26 PDT
Created
attachment 59277
[details]
Patch
Beth Dakin
Comment 4
2010-06-21 17:37:11 PDT
Comment on
attachment 59277
[details]
Patch r=me!
chris fleizach
Comment 5
2010-06-21 18:08:21 PDT
http://trac.webkit.org/changeset/61595
WebKit Review Bot
Comment 6
2010-06-21 18:24:38 PDT
http://trac.webkit.org/changeset/61595
might have broken Qt Windows 32-bit Debug
chris fleizach
Comment 7
2010-06-21 18:28:00 PDT
QT build fix
http://trac.webkit.org/changeset/61596
WebKit Review Bot
Comment 8
2010-06-21 18:32:18 PDT
http://trac.webkit.org/changeset/61596
might have broken Qt Linux Release minimal, Qt Linux ARMv5 Release, and Qt Linux ARMv7 Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug