AX: VoiceOver does not announce WAI-ARIA state change of aria-expanded https://bugs.webkit.org/show_bug.cgi?id=40927

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/aria-expanded-notifications.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAriaExpandedChange):
* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::handleAriaExpandedChange):
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::handleAriaExpandedChanged):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::handleAriaExpandedChanged):
* accessibility/AccessibilityRenderObject.h:
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):
* dom/Element.cpp:
(WebCore::Element::updateAfterAttributeChanged):

LayoutTests:

* platform/mac-leopard/Skipped:
* platform/mac-tiger/Skipped:
* platform/mac/accessibility/aria-expanded-notifications-expected.txt: Added.
* platform/mac/accessibility/aria-expanded-notifications.html: Added.



Canonical link: https://commits.webkit.org/52605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61595 268f45cc-cd09-0410-ab3c-d52691b4dbfc