WebCore/accessibility/AXObjectCache.h
@@ -88,7 +88,8 @@ public:
     void handleAriaRoleChanged(RenderObject*);
     void handleFocusedUIElementChanged(RenderObject* oldFocusedRenderer, RenderObject* newFocusedRenderer);
     void handleScrolledToAnchor(const Node* anchorNode);
-
+    void handleAriaExpandedChange(RenderObject*);
+    
     static void enableAccessibility() { gAccessibilityEnabled = true; }
     static void enableEnhancedUserInterfaceAccessibility() { gAccessibilityEnhancedUserInterfaceEnabled = true; }
     
@@ -116,6 +117,9 @@ public:
         AXScrolledToAnchor,
         AXLiveRegionChanged,
         AXMenuListValueChanged,
+        AXRowCountChanged,
+        AXRowCollapsed,
+        AXRowExpanded,
     };
 
     void postNotification(RenderObject*, AXNotification, bool postToElement, PostType = PostAsynchronously);
@@ -154,6 +158,7 @@ inline void AXObjectCache::postPlatformNotification(AccessibilityObject*, AXNoti
 inline void AXObjectCache::handleFocusedUIElementChanged(RenderObject*, RenderObject*) { }
 inline void AXObjectCache::handleScrolledToAnchor(const Node*) { }
 inline void AXObjectCache::contentChanged(RenderObject*) { }
+inline void AXObjectCache::handleAriaExpandedChange(RenderObject*) { }
 #endif
 
 }
